--- a/CSS/index.css
+++ b/CSS/index.css
@@ -886,7 +886,7 @@ input {
         left: 0;
         z-index: 2;
         background: #ffffff;
-    }V
+    }
     .menu-logo{
         width: 120px;
         top: 10px;
@@ -894,6 +894,7 @@ input {
         padding: 5px;
         border-radius: 7px;
         background: #007bff;
+        color: #2B3377;
         position: absolute;
     }
     #close-menu{
@@ -936,12 +937,12 @@ input {
 
     .link2 {
         padding: 10px 12px;
-        color: #007bff;
+        color: #0026ff;
         border-radius: 4px;
     }
     .link2:hover {
         background: #007bff;
-        color: #fff;
+        color: #ffffff88;
     }
 
 .f-section-con{
